modals and links styling

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -117,15 +117,15 @@
                 <div class="columns is-mobile">
                     <div class="column" style="background-color: #f3f3f3;">
                         <ul>
-                            <li>A propos de Plexar</li>
-                            <li id="credits" style="cursor: pointer;">Crédits</li>
+                            <li class="link">A propos de Plexar</li>
+                            <li class="link" id="credits">Crédits</li>
                         </ul>
                     </div>
 
                     <div class="column" style="background-color: #f3f3f3;">
                         <ul>
-                            <li>Nous contacter</li>
-                            <li>Foire aux questions</li>
+                            <li class="link">Nous contacter</li>
+                            <li class="link">Foire aux questions</li>
                         </ul>
                     </div>
                 </div>
