--- a/TFC/imports/UI/modals/forgotPassword.html
+++ b/TFC/imports/UI/modals/forgotPassword.html
@@ -1,17 +1,25 @@
-<template name="login">
+<template name="forgotPassword">
     <div class="modal is-active">
         <div class="modal-background"></div>
 
         <div class="modal-card">
 
             <header class="modal-card-head">
-                <p class="modal-card-title">Connexion</p>
+                <p class="modal-card-title">Mot de passe oublié</p>
                 <button class="delete" aria-label="close"></button>
             </header>
 
             <section class="modal-card-body">
+                <p class="subtitle">
+                    Vous avez oublié votre mot de passe ?
+                </p>
+                <p>
+                    Merci d'indiquer l’adresse e-mail avec laquelle vous vous êtes inscrit sur Plexar. Nous vous enverrons un lien afin de réinitialiser votre mot de passe.
+                </p>
 
-                <form id="loginForm">
+                <br>
+
+                <form id="forgotPassword">
 
                     <div class="field has-animated-label" id="emailField">
                         <div class="control has-icons-left">
@@ -25,23 +33,11 @@
                         <p class="help is-danger"></p>
                     </div>
 
-                    <div class="field has-animated-label">
-                        <div class="control has-icons-left">
-                            <input type="password" class="input has-animated-label" name="password" id="password" placeholder=" " autocomplete="current-password" required>
-                            <label for="password" class="label is-animated">Mot de passe</label>
-                            <span class="icon is-left">
-                                <i class="fas fa-lock"></i>
-                            </span>
-                        </div>
-                    </div>
-
-                    <br>
-                    <button class="button" id="forgotPassword">Mot de passe oublié</button>
                 </form>
 
                 <br>
 
-                <button class="button is-medium is-fullwidth has-background-success" id="loginSubmit">Se connecter</button>
+                <button class="button is-medium is-fullwidth has-background-success" id="forgotPasswordSubmit">Réinitialiser le mot de passe</button>
 
             </section>
 
