--- a/TFC/imports/UI/modals/register.html
+++ b/TFC/imports/UI/modals/register.html
@@ -71,7 +71,7 @@
 
             <footer class="modal-card-foot">
                 <div class="card-footer-item">
-                    <p class="subtitle has-text-centered">Déjà membre ? <span class="link login">Connectez-vous</span> pour continuer</p>
+                    <p class="subtitle has-text-centered">Déjà membre ? <span class="login link has-text-weight-semibold">Connectez-vous</span> pour continuer</p>
                 </div>
             </footer>
         </div>
