--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -125,7 +125,7 @@
                     <div class="column" style="background-color: #f3f3f3;">
                         <ul>
                             <li class="link">Nous contacter</li>
-                            <li class="link">Foire aux questions</li>
+                            <li class="link" id="faq">Foire aux questions</li>
                         </ul>
                     </div>
                 </div>
