--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -103,9 +103,9 @@
     </header>
 
 
-    {{> Template.dynamic template=currentMessage}}
-    {{> Template.dynamic template=currentModal}}  <!-- Template to display the current modal (if there's one) -->
-    {{> Template.dynamic template=currentPage}} <!-- Affichage du template dynamique -->
+    {{> Template.dynamic template=currentMessage}}  <!-- Ddisplay the current message (if there's one) -->
+    {{> Template.dynamic template=currentModal}}  <!-- Ddisplay the current modal (if there's one) -->
+    {{> Template.dynamic template=currentPage}}  <!-- Dynamic Template to display the current page -->
 
 
     </div>
