--- a/TFC/imports/UI/modals/forgotPassword.html
+++ b/TFC/imports/UI/modals/forgotPassword.html
@@ -43,7 +43,7 @@
 
             <footer class="modal-card-foot">
                 <div class="card-footer-item">
-                    <p class="subtitle has-text-centered">Pas encore de compte ? <span class="register link has-text-weight-semibold">Inscrivez-vous</span> pour continuer</p>
+                    <p class="subtitle has-text-centered">Déjà membre ? <span class="login link has-text-weight-semibold">Connectez-vous</span> pour continuer</p>
                 </div>
             </footer>
         </div>
