filters styling started

--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -117,6 +117,7 @@
                 <div class="columns is-mobile">
                     <div class="column" style="background-color: #f3f3f3;">
                         <ul>
+                            <!--style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;"-->
                             <li class="link">A propos de Plexar</li>
                             <li class="link" id="credits">Crédits</li>
                         </ul>
