--- a/TFC/imports/UI/productBanner.html
+++ b/TFC/imports/UI/productBanner.html
@@ -1,7 +1,7 @@
 <template name="productBanner">
     <article class="message is-info productBanner" id="{{_id}}">
         <div class="message-header">
-            <p>{{name}} ({{_id}})</p>
+            <p>{{name}}</p>
             <p>{{score}}</p>
         </div>
         <div class="message-body">
