--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -113,20 +113,20 @@
     <footer class="footer">
         <div class="columns has-text-centered" style="height: 100%">
 
-            <div class="column">
+            <div class="column" style="background-color: #f3f3f3;">
                 <div class="columns is-mobile">
-                    <div class="column" style="background-color: #f3f3f3;">
+                    <div class="column">
                         <ul>
-                            <!--style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;"-->
-                            <li class="link">A propos de Plexar</li>
-                            <li class="link" id="credits">Crédits</li>
+                            <!---->
+                            <li class="link" style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;" id="about">A propos de Plexar</li>
+                            <li class="link" id="credits" style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;">Crédits</li>
                         </ul>
                     </div>
 
-                    <div class="column" style="background-color: #f3f3f3;">
+                    <div class="column">
                         <ul>
-                            <li class="link">Nous contacter</li>
-                            <li class="link" id="faq">Foire aux questions</li>
+                            <li class="link" style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;">Nous contacter</li>
+                            <li class="link" id="faq" style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;">Foire aux questions</li>
                         </ul>
                     </div>
                 </div>
