--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -36,7 +36,7 @@
                         <li class="step-item is-completed is-success">
                             <div class="step-marker">1</div>
                             <div class="step-details is-primary is-completed">
-                                <p class="step-title">Step 1</p>
+                                <p class="step-title">Ajouter</p>
                                 <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
                                 <p>Chacun est libre de contribuer en ajoutant des produits et ainsi partager ... avec la communauté</p>
                             </div>
@@ -45,7 +45,7 @@
                         <li class="step-item is-success is-completed">
                             <div class="step-marker">2</div>
                             <div class="step-details">
-                                <p class="step-title">Step 2</p>
+                                <p class="step-title">Voter</p>
                                 <span><i class="fas fa-poll image is-64x64" style="display: inline;"></i></span>
                                 <p>Votez pour vos produits favoris pour leur donner de la visibilité</p>
                             </div>
@@ -54,7 +54,7 @@
                         <li class="step-item is-success is-completed">
                             <div class="step-marker">3</div>
                             <div class="step-details">
-                                <p class="step-title">Step 3</p>
+                                <p class="step-title">Rechercher</p>
                                 <span><i class="fas fa-search image is-64x64" style="display: inline;"></i></span>
                                 <p>Trouvez des alternatives pour consommer en ayant un impact positif sur la société</p>
                             </div>
@@ -73,6 +73,7 @@
                 <hr style="margin: 0;">
 
                 <div class="column has-text-centered">
+                    <h4 class="title is-4">Ajouter</h4>
                     <span><i class="fas fa-plus-circle image is-64x64" style="display: inline;"></i></span>
                     <p>Chacun est libre de contribuer en ajoutant des produits et ainsi faire grandir avec la communauté</p>
                 </div>
