--- a/TFC/imports/UI/productBanner.html
+++ b/TFC/imports/UI/productBanner.html
@@ -2,7 +2,7 @@
     <article class="message is-info productBanner" id="{{_id}}">
         <div class="message-header">
             <p>{{name}}</p>
-            <p>{{score}}</p>
+            <p style="font: 1.8rem 'Changa One';">{{score}}</p>
         </div>
         <div class="message-body">
             <div class="field has-addons">
