Filter search by category and sort by popularity added

--- a/TFC/imports/UI/addProduct.html
+++ b/TFC/imports/UI/addProduct.html
@@ -1,4 +1,4 @@
-<template name="manageProduct">
+<template name="addProduct">
     <h3 class="title">Ajouter un produit</h3>
     <form id="newProduct">
 
