--- a/TFC/imports/UI/searchResults.html
+++ b/TFC/imports/UI/searchResults.html
@@ -18,15 +18,32 @@
         <div class="control has-icons-left">
             <div class="select">
                 <select id="sortResults">
-                    <option value="default" selected>Par défaut</option>
+                    <option value="popularity" selected>Popularité</option>
                     <option value="A-Z">Ordre alphabétique</option>
                     <option value="Z-A">Ordre alphabétique inversé</option>
                     <option value='random'>Aléatoire</option>
                 </select>
             </div>
             <div id="sortResultsIconContainer" class="icon is-left" style="color: black;">
+                <i class="fas fa-heart"></i>
             </div>
         </div>
+    </div>
+
+    <div class="field has-addons">
+        <button type="button" class="button is-static">Filtrer par catégories :</button>
+        <div class="select">
+            <select id="categories">
+                <option value="add" selected disabled hidden>Ajouter une catégorie</option>
+                <option value="Alimentation">Alimentation</option>
+                <option value="Informatique">Informatique</option>
+                <option value="Catégorie 3">3</option>
+                <option value='Catégorie 4'>4</option>
+            </select>
+        </div>
+
+        <div class="field is-grouped is-grouped-multiline" id="categoryTags"></div>
+
     </div>
 
     {{#each displayProductsResults}}
