--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -5,7 +5,7 @@
         <nav class="navbar" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
                 <a class="navbar-item" id="home">
-                    <img src="logo.png" style="height: 36px" width="144">
+                    <img src="logo.png" style="width: 144px; height: 36px">
                 </a>
 
                 <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="mainNavbar">
@@ -60,7 +60,7 @@
                                         </a>
 
                                         <hr class="navbar-divider">
-                                        
+
                                         <a class="navbar-item logout">
                                             <span class="icon"><i class="fas fa-power-off"></i></span>
                                             <span>Se déconnecter</span>
@@ -108,16 +108,15 @@
                 <div class="columns is-mobile">
                     <div class="column">
                         <ul>
-                            <!---->
-                            <li class="link" style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;" id="">A propos de Plexar</li>
-                            <li class="link" id="credits" style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;">Crédits</li>
+                            <li class="link width-fit-content" id="about">A propos de Plexar</li>
+                            <li class="link width-fit-content" id="credits">Crédits</li>
                         </ul>
                     </div>
 
                     <div class="column">
                         <ul>
-                            <li class="link" style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;">Nous contacter</li>
-                            <li class="link" id="faq" style="background: linear-gradient(180deg, #e47312, #e47312) no-repeat 0 1.4rem; width: fit-content; margin: auto;">Foire aux questions</li>
+                            <li class="link width-fit-content">Nous contacter</li>
+                            <li class="link width-fit-content" id="faq">Foire aux questions</li>
                         </ul>
                     </div>
                 </div>
