--- a/TFC/imports/UI/home.html
+++ b/TFC/imports/UI/home.html
@@ -6,16 +6,19 @@
                 <p class="title">PLEXAR</p>
                 <p class="subtitle">La plateforme participative de référencement de produits à impact social</p>
                 <form id="searchForm">
+
                     <div class="field has-addons" style="justify-content: center;">
                         <div class="control" style="width: 25em; max-width: 100%;">
                             <input type="search" class="input is-rounded" id="searchBox" placeholder="Rechercher"/>
                         </div>
+
                         <div class="control">
                             <button type="submit" class="button is-rounded">
                                 <i class="fas fa-search"></i>
                             </button>
                         </div>
                     </div>
+                    
                 </form>
             </div>
         </div>
@@ -107,7 +110,7 @@
                         Cette plateforme se base sur un système collaboratif permettant aux utilisateurs à la fois de trouver des produits mais également d’en proposer.
                         Cette participation de la part des utilisateurs permet d’alimenter notre base de données et ainsi de permettre d’agrandir la liste de produits disponibles sur le site.
                         <br>
-                        Découvrez nos <span class="has-text-primary" style="font: 40px 'Changa One';">{{productsCounter}}</span> produits à impact social !
+                        Découvrez nos <span class="has-text-primary" style="font: 2.5rem 'Changa One';">{{productsCounter}}</span> produits à impact social !
                     </p>
                 </div>
             </div>
