--- a/TFC/imports/UI/searchResults.html
+++ b/TFC/imports/UI/searchResults.html
@@ -34,7 +34,7 @@
         <button type="button" class="button is-static">Filtrer par catégories :</button>
         <div class="select">
             <select id="categories">
-                <option value="add" selected disabled hidden>Ajouter une catégorie</option>
+                <option value="add" selected disabled hidden>Sélectionner</option>
                 <option value="Alimentation">Alimentation</option>
                 <option value="Informatique">Informatique</option>
                 <option value="Catégorie 3">3</option>
