--- a/TFC/imports/UI/addProduct.html
+++ b/TFC/imports/UI/addProduct.html
@@ -1,56 +1,60 @@
 <template name="addProduct">
     <h3 class="title">Ajouter un produit</h3>
-    <form id="newProduct">
+    {{#if currentUser}}
+        <form id="newProduct">
 
-        <div class="field has-animated-label">
-            <input type="text" class="input has-animated-label" name="name" id="name" minlength="1" maxlength="70" placeholder=" " required >
-            <label for="name" class="label is-animated">Nom du produit</label>
-            <span id="nameCharCounter" class="character-counter"></span>
-        </div>
-
-
-        <div class="field has-animated-label">
-            <div class="control has-icons-left">
-                <textarea class="textarea has-animated-label" name="description" id="description" minlength="50" maxlength="1000" placeholder=" " required></textarea>
-                <label for="description" class="label is-animated">Description du produit</label>
-                <span class="icon is-left">
-                    <i class="fas fa-file-alt"></i>
-                </span>
+            <div class="field has-animated-label">
+                <input type="text" class="input has-animated-label" name="name" id="name" minlength="1" maxlength="70" placeholder=" " required >
+                <label for="name" class="label is-animated">Nom du produit</label>
+                <span id="nameCharCounter" class="character-counter"></span>
             </div>
-            <span id="descriptionCharCounter" class="character-counter"></span>
-        </div>
 
-        <div class="field">
-            <div class="file has-name is-boxed">
-                <label class="file-label">
-                    <input class="file-input" type="file" name="pictures" id="pictures" accept="image/*" multiple>
-                    <span class="file-cta">
-                        <span class="file-icon">
-                            <i class="fas fa-file-image"></i>
-                        </span>
-                        <span class="file-label">Choisir un fichier…</span>
+
+            <div class="field has-animated-label">
+                <div class="control has-icons-left">
+                    <textarea class="textarea has-animated-label" name="description" id="description" minlength="50" maxlength="1000" placeholder=" " required></textarea>
+                    <label for="description" class="label is-animated">Description du produit</label>
+                    <span class="icon is-left">
+                        <i class="fas fa-file-alt"></i>
                     </span>
-                    <span class="file-name">Aucun fichier sélectionné</span>
-                </label>
-            </div>
-        </div>
-
-        <div class="field">
-            <div class="select">
-                <select id="categories">
-                    <option value="add" selected disabled hidden>Ajouter une catégorie</option>
-                    <option value="Alimentation">Alimentation</option>
-                    <option value="Informatique">Informatique</option>
-                    <option value="Catégorie 3">3</option>
-                    <option value='Catégorie 4'>4</option>
-                </select>
+                </div>
+                <span id="descriptionCharCounter" class="character-counter"></span>
             </div>
 
-            <div class="field is-grouped is-grouped-multiline" id="categoryTags"></div>
+            <div class="field">
+                <div class="file has-name is-boxed">
+                    <label class="file-label">
+                        <input class="file-input" type="file" name="pictures" id="pictures" accept="image/*" multiple>
+                        <span class="file-cta">
+                            <span class="file-icon">
+                                <i class="fas fa-file-image"></i>
+                            </span>
+                            <span class="file-label">Choisir un fichier…</span>
+                        </span>
+                        <span class="file-name">Aucun fichier sélectionné</span>
+                    </label>
+                </div>
+            </div>
 
-        </div>
+            <div class="field">
+                <div class="select">
+                    <select id="categories">
+                        <option value="add" selected disabled hidden>Ajouter une catégorie</option>
+                        <option value="Alimentation">Alimentation</option>
+                        <option value="Informatique">Informatique</option>
+                        <option value="Catégorie 3">3</option>
+                        <option value='Catégorie 4'>4</option>
+                    </select>
+                </div>
 
-        <button id="addProduct" type="submit" class="button is-success">Ajouter le produit !</button>
-    </form>
+                <div class="field is-grouped is-grouped-multiline" id="categoryTags"></div>
+
+            </div>
+
+            <button id="addProduct" type="submit" class="button is-success">Ajouter le produit !</button>
+        </form>
+    {{else}}
+        <p class="subtitle"><span class="register link has-text-weight-semibold">Inscrivez-vous</span> ou <span class="login link has-text-weight-semibold">connectez-vous</span> pour continuer.</p>
+    {{/if}}
 
 </template>
