--- a/TFC/imports/UI/productPage.html
+++ b/TFC/imports/UI/productPage.html
@@ -101,7 +101,7 @@
                         <p>Partager</p>
                     </button>
 
-                    <button class="button has-text-danger">
+                    <button class="button has-text-danger report" id="{{_id}}">
                         <span class="icon"><i class="fas fa-exclamation-triangle"></i></span>
                         <p>Signaler</p>
                     </button>
