--- a/TFC/imports/UI/body.html
+++ b/TFC/imports/UI/body.html
@@ -18,7 +18,13 @@
             <div id="mainNavbar" class="navbar-menu">
                 <div class="navbar-start">
 
+                    <a class="navbar-item" id="search">
+                        <span class="icon" style="margin-right: 0;"><i class="fas fa-search"></i></span>
+                        Rechercher
+                    </a>
+
                     <a class="navbar-item" id="addProduct">Ajouter un produit</a>
+                    <a class="navbar-item" id="pending">Modération</a>
 
                     <div class="navbar-item has-dropdown is-hoverable" id="moreDropdown">
                         <a class="navbar-link">More</a>
