--- a/TFC/imports/UI/user/contributions.html
+++ b/TFC/imports/UI/user/contributions.html
@@ -3,33 +3,19 @@
     <table class="table is-bordered is-striped is-hoverable">
         <thead>
             <tr>
-                <th>Type</th>
                 <th>Date</th>
+                <th>Type</th>
                 <th>Élément concerné</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>Ajout</td>
-                <td>30/03/2020</td>
-                <td>
-                    Nom du produit
-                </td>
-            </tr>
-            <tr>
-                <td>Édition</td>
-                <td>30/03/2020</td>
-                <td>
-                    Le texte ci-dessous fait 70 caractères (taille maximale nom produit)
-                </td>
-            </tr>
-            <tr>
-                <td>Vote</td>
-                <td>30/03/2020</td>
-                <td>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nullam.
-                </td>
-            </tr>
+            {{#each displayContribution}}
+                <tr>
+                    <td>{{content.createdAt}}</td>
+                    <td>{{content.type}}</td>
+                    <td>{{content.element}}</td>
+                </tr>
+            {{/each}}
         </tbody>
     </table>
 
