--- a/TFC/imports/UI/productBanner.html
+++ b/TFC/imports/UI/productBanner.html
@@ -1,30 +1,34 @@
 <template name="productBanner">
-    <article class="message is-info productBanner" id="{{_id}}">
-
-        <div class="message-header">
-            <p>{{name}}</p>
-            <p style="font: 1.8rem 'Changa One';">{{score}} <i class="fas fa-heart" style="font-size: 1.5rem;"></i></p>
-        </div>
-
-        <div class="message-body">
-
-            <div class="field has-addons">
-                <img src="{{displayProductFirstImage _id}}" alt="Image du produit" class="image is-150x150"/>
-                <p id="description">{{description}}</p>
+    <article class="message is-info">
+        <div class="productBanner" id="{{_id}}">
+            <div class="message-header">
+                <p>{{name}}</p>
+                <p style="font: 1.8rem 'Changa One';">{{score}} <i class="fas fa-heart" style="font-size: 1.5rem;"></i></p>
             </div>
 
-            <div class="tags">
-            {{#each displayProductCategories _id}}
-                <span class="tag is-link">{{this}}</span>
-            {{/each}}
-            </div>
-
-            {{#if underModeration _id}}
-                <div class="has-text-centered">
-                    <button class="button is-danger">Rejeter l'ajout</button>
-                    <button class="button is-success pendingAccepted" id="{{_id}}">Valider l'ajout</button>
+            <div class="message-body">
+                <div class="field has-addons">
+                    <img src="{{displayProductFirstImage _id}}" alt="Image du produit" class="image is-150x150"/>
+                    <p id="description">{{description}}</p>
                 </div>
-            {{/if}}
+
+                <div class="tags">
+                {{#each displayProductCategories _id}}
+                    <span class="tag is-link">{{this}}</span>
+                {{/each}}
+                </div>
+
+            </div>
         </div>
+
+        {{#if underModeration _id}}
+            {{#each displayModerationControls _id}}
+                <div class="has-text-centered">
+                    <p>Raison : {{reason}}</p>
+                    <button class="button is-danger">Rejeter</button>
+                    <button class="button is-success moderationAccepted" id="{{_id}}">Valider</button>
+                </div>
+            {{/each}}
+        {{/if}}
     </article>
 </template>
